force-app/main/default/objects/MWConstants__c/MWConstants__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>MWConstants</label>
</CustomObject>