force-app/main/default/objects/MWConstants__c/fields/BrokerID__c.field-meta.xml
<CustomField>
    <fullName>BrokerID__c</fullName>
    <description>Broker ID static for one client</description>
    <label>BrokerID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>