force-app/main/default/objects/MWConstants__c/fields/CaseEndPoint__c.field-meta.xml
<CustomField>
    <fullName>CaseEndPoint__c</fullName>
    <label>CaseEndPoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>