force-app/main/default/objects/MWConstants__c/fields/CRMApplicant__c.field-meta.xml
<CustomField>
    <fullName>CRMApplicant__c</fullName>
    <description>Sync Records initiate from SF to MW</description>
    <label>CRMApplicantEndPoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>