force-app/main/default/objects/MWConstants__c/fields/CRMCases__c.field-meta.xml
<CustomField>
    <fullName>CRMCases__c</fullName>
    <description>Sync Records from SF to MW</description>
    <label>CRMCasesEndPoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>