force-app/main/default/objects/MWConstants__c/fields/LoginEndPoint__c.field-meta.xml
<CustomField>
    <fullName>LoginEndPoint__c</fullName>
    <label>LoginEndPoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>