force-app/main/default/objects/MWConstants__c/fields/NotificationsEndPoint__c.field-meta.xml
<CustomField>
    <fullName>NotificationsEndPoint__c</fullName>
    <label>NotificationsEndPoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>