force-app/main/default/objects/MWConstants__c/fields/SearchProductEndPoint__c.field-meta.xml
<CustomField>
    <fullName>SearchProductEndPoint__c</fullName>
    <label>SearchProductEndPoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>