force-app/main/default/objects/MWConstants__c/fields/SyncDataEndPoint__c.field-meta.xml
<CustomField>
    <fullName>SyncDataEndPoint__c</fullName>
    <label>SyncDataEndPoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>