force-app/main/default/objects/MWConstants__c/fields/UploadCRMDocumentsEndPoint__c.field-meta.xml
<CustomField>
    <fullName>UploadCRMDocumentsEndPoint__c</fullName>
    <label>UploadCRMDocumentsEndPoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>