force-app/main/default/objects/MWConstants__c/fields/username__c.field-meta.xml
<CustomField>
    <fullName>username__c</fullName>
    <label>username</label>
    <type>Email</type>
</CustomField>